deck list view simplified, stripped row views of formatting
