# openapi.yaml
@@ -124,6 +124,35 @@ paths:
       - Deck
       summary: Decks the user has access to
       operationId: list_decks
+      parameters:
+      - name: page
+        in: query
+        description: Page number
+        required: false
+        schema:
+          type: integer
+          format: int32
+          minimum: 0
+      - name: per_page
+        in: query
+        description: Items per page
+        required: false
+        schema:
+          type: integer
+          format: int32
+          minimum: 0
+      - name: search
+        in: query
+        description: Search term
+        required: false
+        schema:
+          type: string
+      - name: assignee
+        in: query
+        description: Filter by assignee
+        required: false
+        schema:
+          type: string
       responses:
         '200':
           description: User decks retrieved
